# warehouse

./: pyproject.toml
src/warehouse/: __init__.py
src/warehouse/cli/: main.py
src/warehouse/core/: entities.py  warehouse.py
