[project]
name = "warehouse"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "user-raghava", email = "raghavendragovindu007@gmail.com" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
warehouse = "warehouse:main"

[build-system]
requires = ["uv_build>=0.9.4,<0.10.0"]
build-backend = "uv_build"
